nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-servicio
  namespace: dev
  labels:
    app: mi-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: mi-web
